src/objects/mAg_Socioeconomic__c.object
<CustomObject>
    <fields>
        <fullName>HouseHoldMainActivity__c</fullName>
        <label>HouseHoldMainActivity</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberOfParcels__c</fullName>
        <label>NumberOfParcels</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mAg_Household__c</fullName>
        <label>mAg_Household</label>
        <referenceTo>mAg_Household__c</referenceTo>
        <relationshipLabel>mAg_Socioeconomics</relationshipLabel>
        <relationshipName>mAg_Socioeconomics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>mAg_Socioeconomic</label>
    <nameField>
        <displayFormat>MAGSOCEC{0000}</displayFormat>
        <label>mAg_Socioeconomic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>mAg_Socioeconomics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>